--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -51,7 +51,7 @@ source user_core_0
   sql_db = alik_development
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `users`.`id` * CAST(2 AS SIGNED) + 1 AS `id` , `users`.`email` AS `email`, `users`.`username` AS `username`, `cities`.`name` AS `city_name`, `states`.`name` AS `state_name`, `users`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 765557111 AS `class_crc`, IFNULL('User', '') AS `sphinx_internal_class`, IFNULL(`users`.`username`, '') AS `username_sort`, `users`.`state_id` AS `state_id`, UNIX_TIMESTAMP(`users`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`users`.`updated_at`) AS `updated_at` FROM `users` LEFT OUTER JOIN `cities` ON `cities`.`id` = `users`.`city_id` LEFT OUTER JOIN `states` ON `states`.`id` = `users`.`state_id` WHERE (`users`.`id` >= $start AND `users`.`id` <= $end) GROUP BY `users`.`id` ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `users`.`id` * CAST(2 AS SIGNED) + 1 AS `id` , `users`.`email` AS `email`, `users`.`username` AS `username`, `cities`.`name` AS `city_name`, `users`.`state_id` AS `state_name`, `users`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 765557111 AS `class_crc`, IFNULL('User', '') AS `sphinx_internal_class`, IFNULL(`users`.`username`, '') AS `username_sort`, `users`.`state_id` AS `state_id`, UNIX_TIMESTAMP(`users`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`users`.`updated_at`) AS `updated_at` FROM `users` LEFT OUTER JOIN `cities` ON `cities`.`id` = `users`.`city_id` WHERE (`users`.`id` >= $start AND `users`.`id` <= $end) GROUP BY `users`.`id` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `users` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
