--- a/config/email.yml
+++ b/config/email.yml
@@ -1,3 +1,14 @@
+development:
+  delivery_method: :smtp
+  smtp_settings:
+    enable_startttls_auto: true
+    address: smtp.gmail.com
+    port: 587
+    domain: ernanesena.com.br
+    authentication: :plain
+    user_name: "noreplay@ernanesena.com.br"
+    password: "cliente2011"
+    
 production:
   delivery_method: :smtp
   smtp_settings:
